# allegro_hand_ros

./: .gitignore  .gitignore.orig  AllegroHand.launch  AllegroHand_wJGUI.launch  CHANGE_LOG.txt  README.md  TODO  allegro_hand.launch  allegro_hand_jgui.launch  allegro_hand_jgui_hardware.launch  allegro_hand_jgui_virtual.launch  allegro_hand_joint_gui.launch  allegro_hand_joint_gui_virtual.launch  allegro_hand_noRviz.launch  allegro_hand_param.launch  allegro_hand_param_newURDFtest.launch  allegro_hand_param_slp.launch  allegro_hand_param_temp.launch  allegro_hand_param_velSat.launch  allegro_hand_pd.launch  allegro_hand_pd_slp.launch  allegro_hand_slp.launch  allegro_hand_virtual.launch  allegro_hand_works.launch  devBranch.txt  stack.xml
AllegroHand_CAN/src/: allegroCAN.cpp
AllegroHand_core/src/: allegroCAN.cpp
AllegroHand_keyboard/: CMakeLists.txt
AllegroHand_keyboard/src/: AllegroHand_keyboard.cpp
AllegroHand_urdf/: AllegroHand_Left.urdf  CMakeLists.txt  display.launch  urdf.vcg
allegro_hand/: CMakeLists.txt  package.xml
allegro_hand/src/: allegroNode.cpp  controlAllegroHand.cpp
allegro_hand_common/: CMakeLists.txt  package.xml
allegro_hand_common/include/: controlAllegroHand.h
allegro_hand_common/src/: controlAllegroHand.cpp  controlAllegroHand.h
allegro_hand_controllers/: CMakeLists.txt  package.xml
allegro_hand_controllers/allegro_hand_core_grasp/src/: allegroNode.cpp
allegro_hand_controllers/allegro_hand_core_grasp_slp/src/: allegroNode.cpp
allegro_hand_controllers/allegro_hand_core_pd/src/: allegroNode.cpp
allegro_hand_controllers/allegro_hand_core_pd_slp/src/: allegroNode.cpp
allegro_hand_controllers/allegro_hand_core_template/src/: allegroNode.cpp
allegro_hand_controllers/allegro_hand_core_template_slp/: CMakeLists.txt
allegro_hand_controllers/allegro_hand_core_template_slp/src/: allegroNode.cpp
allegro_hand_controllers/allegro_hand_core_velSat/src/: allegroNode.cpp
allegro_hand_controllers/launch/: allegro_hand.launch  allegro_hand_joint_gui.launch  allegro_hand_noRviz.launch
allegro_hand_controllers/src/: allegro_node_grasp.cpp  allegro_node_pd.cpp  allegro_node_velsat.cpp
allegro_hand_core_2pd/: CMakeLists.txt
allegro_hand_core_2pd/src/: allegroNode.cpp
allegro_hand_core_grasp_slp/: CMakeLists.txt
allegro_hand_description/: AllegroHand_Left.urdf.xacro  CMakeLists.txt  allegro_hand_config.rviz  allegro_hand_config.vcg  allegro_hand_description_left.urdf  allegro_hand_description_left.xacro  allegro_hand_description_right.  allegro_hand_description_right.urdf  allegro_hand_description_right.urdf.xacro  allegro_hand_description_right.xacro  build_desc.sh  package.xml
allegro_hand_keyboard/: CMakeLists.txt  manifest.xml  package.xml
allegro_hand_parameters/: CMakeLists.txt  package.xml
allegro_hand_urdf/: AllegroHand_Left.gv
bagfiles/: jointcmd.bag  jointstates.bag  lib_cmd.bag
bhand/: CMakeLists.txt  package.xml
joint_state_publisher_experimental/: manifest.xml
launch/: allegro_hand.launch  allegro_hand_joint_gui_virtual.launch
launcherBackups/: allegro_hand_param_velSat.launch  allegro_hand_pd.launch
libpcan/: install_pcan.sh
parameters/: gains.yaml  gains_orig.yaml  gains_pd.yaml  zero.yaml  zero_SAH01010002.yaml  zero_SAH01020003.yaml  zero_orig.yaml
right_hand_simple_assembly_3/: manifest.xml
underDevelopment/: README.md
urdf_tools_exp/: README.md
(+65 files in other folders)
