<?xml version="1.0"?>
<package>
  <name>allegro_hand</name>
  <version>0.0.0</version>
  <description>ROS interface to the allegro hand.</description>
  <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>

  <url type="website">http://wiki.ros.org/allegro_hand_ros</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>allegro_hand_common</run_depend>
  <run_depend>allegro_hand_controllers</run_depend>
  <run_depend>allegro_hand_description</run_depend>
  <run_depend>allegro_hand_keyboard</run_depend>

  <!-- This is a meta-package. -->
  <export>
    <metapackage/>
  </export>
</package>
